# fastapi-mongo

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
